# cdemu

cdemu-client/: CMakeLists.txt  README
cdemu-client/debian/: changelog
cdemu-client/debian/appstream/: net.sf.cdemu.client.metainfo.xml
cdemu-client/src/: cdemu
cdemu-daemon/: CMakeLists.txt  README
cdemu-daemon/debian/: changelog
cdemu-daemon/debian/appstream/: net.sf.cdemu.daemon.metainfo.xml
cdemu-daemon/po/: ka.po  ro.po  ru.po  sl.po
cdemu-daemon/src/: audio.c  daemon-dbus.c  daemon.c  device-commands.c  device-delay.c  device-features.c  device-kernel-io.c  device-load.c  device-mapping.c  device-mode-pages.c  device-recording.c  device.c  main.c
gcdemu/: CMakeLists.txt  README
gcdemu/debian/: changelog
gcdemu/debian/appstream/: net.sf.cdemu.gtk_client.metainfo.xml
gcdemu/src/: gcdemu
image-analyzer/: CMakeLists.txt  README
image-analyzer/debian/: changelog
image-analyzer/debian/appstream/: net.sf.cdemu.image_analyzer.metainfo.xml
image-analyzer/src/: image-analyzer
libmirage/: CMakeLists.txt  README
libmirage/debian/: changelog  control  libmirage12.symbols
libmirage/debian/appstream/: net.sf.cdemu.libmirage.metainfo.xml
libmirage/filters/filter-cso/: filter-stream.c
libmirage/filters/filter-daa/: filter-stream.c
libmirage/filters/filter-dmg/: CMakeLists.txt  adc.c  adc.h  filter-encrcdsa.h  filter-stream-encrcdsa.c  filter-stream-encrcdsa.h  filter-stream.c  plugin.c  resource-fork.c  resource-fork.h
libmirage/filters/filter-ecm/: filter-stream.c
libmirage/filters/filter-gzip/: filter-stream.c
libmirage/images/image-chd/: CMakeLists.txt  fragment.c  fragment.h  image-chd.h  parser.c  parser.h  plugin.c
libmirage/mirage/: cdtext-coder.c  config.h.in  contextual.c  contextual.h  disc.c  disc.h  file-stream.c  filter-stream.c  fragment.c  fragment.h  mirage.c  object.c  parser.c  plugin.c  sector.c  session.c  track.c  track.h  utils.c  utils.h  writer.c
libmirage/reference/: libmirage-sections.txt
tools/compare-images/: compare_images.py
tools/image-load-test/: CMakeLists.txt  main.c
(+26 files in other folders)
